tests/compile-fail/integration__integration__mapfiles__intrinsic_jmp_mislabeled_time.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic Jmp(): unexpected dword integer arg at index 1
  ┌─ <mapfile-1>:5:3
  │
5 │ 4 So
  │   ^^ unexpected dword integer arg at index 1


